
2016-11-21  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* tree.c, parser.y: fixing tree cast errors (found by COB_TREE_DEBUG)

2016-11-19 Edward Hart <edward.dan.hart@gmail.com>

	* parser.y, reserved.c, etc.: added complete recognition of all
	  COMMUNICATION SECTION syntax.
	* config.def: added use-for-debugging config option.

2016-11-16  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_call_cache): fix bug #341 added generation of macro
	  check in C function declarations for static CALLs

2016-11-14  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_trim_program_id): change warning message for remove of
	  spaces in program-id to be more specific and don't warn embedded spaces

2016-11-13  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* parser.y, typeck.c (cb_trim_program_id), tree.h: added code to warn
	  if SPACES are used in a PROGRAM-ID or CALL 'literal' plus the SPACES
	  are removed

2016-11-12  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* parser.y: fixed extended_with_lock by differentiating between WITH
	  LOCK / NO LOCK / KEPT LOCK
	* typeck.c (cb_emit_read): set read_opts COB_READ_LOCK and
	  COB_READ_KEPT_LOCK for I/O statements with KEPT LOCK

2016-11-11  Dave Pitts <dpitts@cozx.com>

	* cobc.c, cobc.h: Multiple changes to support 5 digit variable size and
	  cross reference changes.

2016-11-10  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* tree.h: added cb_field->validation (First level 88 field, if any)
	* field.c (cb_build_field_tree): add validation entry and sisters
	* cobc.c (print_88_values, xref_88_values): use new validation entries
	  instead of checking all word references against the field
	  (huge! time saver and correct order)

2016-11-09  Dave Pitts <dpitts@cozx.com>

	* cobc.c, cobc.h, parser.y, tree.h, typeck.c: Added internal cross
	  reference support.

2016-11-07  Jim Rinn <jimrinn1@gmail.com>
