@@ -1061,13 +1061,15 @@ get_new_listing_file (void)
 {
 	struct list_files	*newfile = cobc_malloc (sizeof (struct list_files));
 
-	if (cb_current_file->copy_tail) {
-		cb_current_file->copy_tail->next = newfile;
-	}
 	if (!cb_current_file->copy_head) {
 		cb_current_file->copy_head = newfile;
 	}
+#if 0 /* lstings - doesn't seem to be used */
+	if (cb_current_file->copy_tail) {
+		cb_current_file->copy_tail->next = newfile;
+	}
 	cb_current_file->copy_tail = newfile;
+#endif
 
 	memset (newfile, 0, sizeof (struct list_files));
 	newfile->copy_line = cb_source_line;
